--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ compiler:
     - gcc
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y libconfig-dev libcairo2-dev libpango1.0-dev
+    - sudo apt-get install -y libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
 script: make
