--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: c 
+dist: trusty
+language: c
 compiler:
     - gcc
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
+    - sudo apt-get install -y gcc-5 libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
 script: make
