--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 dist: trusty
 language: c
 compiler:
-    - gcc
+    - gcc-5
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y gcc-5 libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
+    - sudo apt-get install -y libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
 script: make
