--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: c
 compiler:
-    - gcc-5
+    - gcc
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
