--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ compiler:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
-script: make CPPFLAGS=-DOLD_LIBCONFIG
+    - export CPPFLAGS=-DOLD_LIBCONFG
+script: make
 
