Correct typo in travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ compiler:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y libxcb-randr0-dev libconfig-dev libcairo2-dev libpango1.0-dev
-    - export CPPFLAGS=-DOLD_LIBCONFG
+    - export CPPFLAGS=-DOLD_LIBCONFIG
 script: make
 
