--- a/examples/internal1.config
+++ b/examples/internal1.config
@@ -5,7 +5,7 @@ bar-list = ["bar1"];
 
 bar1:{
 	font: "Droid Sans, FontAwesome Bold 10";
-	block-list: ["ya_date", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk"];
+	block-list: ["ya_ws", "ya_title", "ya_date", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk"];
 	#block-list: ["ya_date", "ya_uptime"];
 	position: "top";
 	gap-horizontal: 20; 		#width in pixels
@@ -20,8 +20,20 @@ bar1:{
 	underline-size: 2;
 	overline-size: 2;
 	slack-size: 2;
+	ya_ws: {
+		exec: "YABAR_WORKSPACE";
+		align: "left";
+		fixed-size: 40;
+		internal-option1: "        ";
+	}
+	ya_title: {
+		exec: "YABAR_TITLE";
+		align: "left";
+		justify: "left";
+		fixed-size: 300;
+	}
 	ya_date:{
-		exec: "YA_INT_DATE";
+		exec: "YABAR_DATE";
 		align: "center";
 		fixed-size: 120;
 		interval: 2;
@@ -31,7 +43,7 @@ bar1:{
 		internal-option1: "%a %d %b, %I:%M";
 	}
 	ya_uptime:{
-		exec: "YA_INT_UPTIME";
+		exec: "YABAR_UPTIME";
 		align: "right";
 		fixed-size: 70;
 		interval: 1;
@@ -40,7 +52,7 @@ bar1:{
 		internal-prefix: " ";
 	}
 	ya_mem:{
-		exec: "YA_INT_MEMORY";
+		exec: "YABAR_MEMORY";
 		align: "right";
 		fixed-size: 70;
 		interval: 1;
@@ -49,7 +61,7 @@ bar1:{
 		internal-prefix: " ";
 	}
 	ya_thermal: {
-		exec: "YA_INT_THERMAL";
+		exec: "YABAR_THERMAL";
 		align: "right";
 		fixed-size: 40;
 		interval: 1;
@@ -59,7 +71,7 @@ bar1:{
 		internal-prefix: " ";
 	}
 	ya_brightness: {
-		exec: "YA_INT_BRIGHTNESS";
+		exec: "YABAR_BRIGHTNESS";
 		align: "right";
 		fixed-size: 40;
 		interval: 1;
@@ -69,7 +81,7 @@ bar1:{
 		internal-option1: "intel_backlight";
 	}
 	ya_bw: {
-		exec: "YA_INT_BANDWIDTH";
+		exec: "YABAR_BANDWIDTH";
 		align: "right";
 		fixed-size: 110;
 		interval: 1;
@@ -81,7 +93,7 @@ bar1:{
 		underline-color-rgb:0xD95B43;
 	}
 	ya_cpu: {
-		exec: "YA_INT_CPU";
+		exec: "YABAR_CPU";
 		align: "right";
 		fixed-size: 60;
 		interval: 1;
@@ -91,7 +103,7 @@ bar1:{
 		underline-color-rgb:0xE97F02;
 	}
 	ya_disk: {
-		exec: "YA_INT_DISKIO";
+		exec: "YABAR_DISKIO";
 		align: "right";
 		fixed-size: 110;
 		interval: 1;
