Added spacing feature to internal blocks.

--- a/examples/internal1.config
+++ b/examples/internal1.config
@@ -20,6 +20,7 @@ bar1:{
 	underline-size: 2;
 	overline-size: 2;
 	slack-size: 2;
+	#spacing: true;
 	ya_ws: {
 		exec: "YABAR_WORKSPACE";
 		align: "left";
