--- a/examples/internal1.config
+++ b/examples/internal1.config
@@ -20,7 +20,6 @@ bar1:{
 	underline-size: 2;
 	overline-size: 2;
 	slack-size: 2;
-	#spacing: true;
 	ya_ws: {
 		exec: "YABAR_WORKSPACE";
 		align: "left";
@@ -51,6 +50,7 @@ bar1:{
 		background-color-rgb:0x96B49C;
 		underline-color-rgb:0xF8CA00;
 		internal-prefix: " ";
+		#internal-spacing: true;
 	}
 	ya_mem:{
 		exec: "YABAR_MEMORY";
@@ -60,6 +60,7 @@ bar1:{
 		background-color-rgb:0x45ADA8;
 		underline-color-rgb:0xFA6900;
 		internal-prefix: " ";
+		#internal-spacing: true;
 	}
 	ya_thermal: {
 		exec: "YABAR_THERMAL";
@@ -70,6 +71,7 @@ bar1:{
 		underline-color-rgb:0xE08E79;
 		internal-option1: "thermal_zone0"; #Get NAME from /sys/class/NAME/temp
 		internal-prefix: " ";
+		#internal-spacing: true;
 	}
 	ya_brightness: {
 		exec: "YABAR_BRIGHTNESS";
@@ -80,6 +82,7 @@ bar1:{
 		underline-color-rgb:0xBD1550;
 		internal-prefix: " ";
 		internal-option1: "intel_backlight";
+		#internal-spacing: true;
 	}
 	ya_bw: {
 		exec: "YABAR_BANDWIDTH";
@@ -92,6 +95,7 @@ bar1:{
 		#background-color-rgb:0x547980;
 		background-color-rgb:0x3EC9A7;
 		underline-color-rgb:0xD95B43;
+		#internal-spacing: true;
 	}
 	ya_cpu: {
 		exec: "YABAR_CPU";
@@ -102,6 +106,7 @@ bar1:{
 		internal-suffix: "%";
 		background-color-rgb:0x98D9B6;
 		underline-color-rgb:0xE97F02;
+		#internal-spacing: true;
 	}
 	ya_disk: {
 		exec: "YABAR_DISKIO";
@@ -113,5 +118,6 @@ bar1:{
 		internal-option2: " "; #Use characters(usually utf characters as shown) to be placed before down/up data, separated by a space
 		background-color-rgb:0x49708A;
 		underline-color-rgb:0xECD078;
+		#internal-spacing: true;
 	}
 }
