--- a/examples/internal1.config
+++ b/examples/internal1.config
@@ -5,7 +5,7 @@ bar-list = ["bar1"];
 
 bar1:{
 	font: "Droid Sans, FontAwesome Bold 10";
-	block-list: ["ya_ws", "ya_title", "ya_date", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk"];
+	block-list: ["ya_ws", "ya_title", "ya_date", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk", "ya_bat"];
 	#block-list: ["ya_date", "ya_uptime"];
 	position: "top";
 	gap-horizontal: 20; 		#width in pixels
@@ -106,6 +106,16 @@ bar1:{
 		internal-suffix: "%";
 		background-color-rgb:0x98D9B6;
 		underline-color-rgb:0xE97F02;
+		#internal-spacing: true;
+	}
+	ya_bat: {
+		exec: "YABAR_BATTERY";
+		align: "right";
+		fixed-size: 70;
+		interval: 1;
+		internal-suffix: "%";
+		internal-option1: "BAT0";
+		internal-option2: "        ";
 		#internal-spacing: true;
 	}
 	ya_disk: {
