Fixed internal options 2 and 3 for the internal temperature block, and added examples to the README and config. Also removed whitespace in README.

--- a/examples/internal1.config
+++ b/examples/internal1.config
@@ -70,6 +70,8 @@ bar1:{
 		background-color-rgb:0x309292;
 		underline-color-rgb:0xE08E79;
 		internal-option1: "thermal_zone0"; #Get NAME from /sys/class/NAME/temp
+		internal-option2: "70 0xFFFFFFFF 0xFFED303C"; #Critical Temperature, fg, bg
+		internal-option3: "58 0xFFFFFFFF 0xFFF4A345"; #Warning Temperature, fg, bg
 		internal-prefix: " ";
 		#internal-spacing: true;
 	}
