Changed delimiter to semicolon
Removed unnecessary spacing in battery block.

Now that the delimiter has changed to semicolons, we can use spaces in
the icon strings, and thus do not need an extra appended space.

--- a/examples/internal1.config
+++ b/examples/internal1.config
@@ -70,8 +70,8 @@ bar1:{
 		background-color-rgb:0x309292;
 		underline-color-rgb:0xE08E79;
 		internal-option1: "thermal_zone0"; #Get NAME from /sys/class/NAME/temp
-		internal-option2: "70 0xFFFFFFFF 0xFFED303C"; #Critical Temperature, fg, bg
-		internal-option3: "58 0xFFFFFFFF 0xFFF4A345"; #Warning Temperature, fg, bg
+		internal-option2: "70; 0xFFFFFFFF; 0xFFED303C"; #Critical Temperature, fg, bg
+		internal-option3: "58; 0xFFFFFFFF; 0xFFF4A345"; #Warning Temperature, fg, bg
 		internal-prefix: " ";
 		#internal-spacing: true;
 	}
@@ -93,7 +93,7 @@ bar1:{
 		interval: 1;
 		internal-prefix: " ";
 		internal-option1: "wlo1"; #Replace this with your network interface. Get it by using the command `ifconfig` or `ip addr show`
-		internal-option2: " "; #Use characters(usually utf characters as shown) to be placed before down/up data, separated by a space
+		internal-option2: "; "; #Use characters(usually utf characters as shown) to be placed before down/up data, separated by a space
 		#background-color-rgb:0x547980;
 		background-color-rgb:0x3EC9A7;
 		underline-color-rgb:0xD95B43;
@@ -117,7 +117,7 @@ bar1:{
 		interval: 1;
 		internal-suffix: "%";
 		internal-option1: "BAT0";
-		internal-option2: "        ";
+		internal-option2: " ;   ;   ;   ;  ";
 		#internal-spacing: true;
 	}
 	ya_disk: {
@@ -127,7 +127,7 @@ bar1:{
 		interval: 1;
 		internal-prefix: " ";
 		internal-option1: "sda"; #Get NAME from /sys/class/block/NAME/stat
-		internal-option2: " "; #Use characters(usually utf characters as shown) to be placed before down/up data, separated by a space
+		internal-option2: "; "; #Use characters(usually utf characters as shown) to be placed before down/up data, separated by a space
 		background-color-rgb:0x49708A;
 		underline-color-rgb:0xECD078;
 		#internal-spacing: true;
