Use absolute path for YABAR_THERMAL and YABAR_BRIGHTNESS
Allows for greater flexibility (e.g. with non-standard locations)
Fixes https://github.com/yabar-dev/yabar-fork/issues/3

--- a/examples/example.config
+++ b/examples/example.config
@@ -67,7 +67,7 @@ topbar:{
 		interval: 1;
 		background-color-rgb:0x309292;
 		underline-color-rgb:0xE08E79;
-		internal-option1: "thermal_zone0"; # get name from /sys/class/NAME/temp
+		internal-option1: "/sys/class/temp/thermal_zone0/temp";
 		internal-option2: "70; 0xFFFFFFFF; 0xFFED303C"; #Critical Temperature, fg, bg
 		internal-option3: "58; 0xFFFFFFFF; 0xFFF4A345"; #Warning Temperature, fg, bg
 		internal-prefix: " ";
@@ -81,7 +81,7 @@ topbar:{
 		background-color-rgb:0x81A8B8;
 		underline-color-rgb:0xBD1550;
 		internal-prefix: " ";
-		internal-option1: "intel_backlight";
+		internal-option1: "/sys/class/backlight/intel_backlight/brightness";
 		#internal-spacing: true;
 	}
 	ya_bw: {
@@ -90,7 +90,7 @@ topbar:{
 		fixed-size: 110;
 		interval: 1;
 		internal-prefix: " ";
-		internal-option1: "wlo1"; # network interface, get running `ifconfig` or `ip link`
+		internal-option1: "wlan0"; # network interface, get running `ifconfig` or `ip link`
 		internal-option2: "; "; # characters to be placed before down/up data
 		#background-color-rgb:0x547980;
 		background-color-rgb:0x3EC9A7;
