--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - libcairo2-dev
       - libpango1.0-dev
       - libxcb-ewmh-dev
+      - libasound2-dev
 before_install:
     - export CPPFLAGS=-DOLD_LIBCONFIG
 script: make
