--- a/examples/example.config
+++ b/examples/example.config
@@ -4,7 +4,7 @@
 bar-list = ["topbar"];
 topbar:{
 	font: "Droid Sans, FontAwesome Bold 9";
-    block-list: ["ya_ws", "ya_title", "ya_date", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk", "ya_bat"];
+    block-list: ["ya_ws", "ya_title", "ya_date", "ya_volume", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk", "ya_bat"];
 	position: "top";
 	gap-horizontal: 10;
 	gap-vertical: 10;
@@ -39,6 +39,17 @@ topbar:{
 		underline-color-rgb:0xC02942;
 		internal-prefix: " ";
 		internal-option1: "%a %d %b, %I:%M";
+	}
+	ya_volume:{
+		exec: "YABAR_VOLUME";
+		align: "right";
+		interval: 1;
+		internal-option1 : "default"; # device
+		internal-option2 : "Master 0"; # Mixer index (separated by a space)
+		internal-option3 : " "; # characters to display when sound is on or off (separated by a space)
+		internal-suffix: "%";
+		background-color-rgb:0x529e67;
+		underline-color-rgb:0x91313b;
 	}
 	ya_uptime:{
 		exec: "YABAR_UPTIME";
