--- a/examples/example.config
+++ b/examples/example.config
@@ -45,8 +45,8 @@ topbar:{
 		align: "right";
 		interval: 1;
 		internal-option1 : "default"; # device
-		internal-option2 : "Master 0"; # Mixer index (separated by a space)
-		internal-option3 : " "; # characters to display when sound is on or off (separated by a space)
+		internal-option2 : "Master;0"; # Mixer index (separated by a semicolon)
+		internal-option3 : " ;"; # characters to display when sound is on or off (separated by a semicolon)
 		internal-suffix: "%";
 		background-color-rgb:0x529e67;
 		underline-color-rgb:0x91313b;
