add disk usage block

--- a/examples/example.config
+++ b/examples/example.config
@@ -4,7 +4,7 @@
 bar-list = ["topbar"];
 topbar:{
 	font: "Droid Sans, FontAwesome Bold 9";
-    block-list: ["ya_ws", "ya_title", "ya_date", "ya_volume", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk", "ya_bat"];
+    block-list: ["ya_diskspace", "ya_ws", "ya_title", "ya_date", "ya_volume", "ya_uptime", "ya_cpu", "ya_thermal", "ya_brightness", "ya_bw", "ya_mem", "ya_disk", "ya_bat"];
 	position: "top";
 	gap-horizontal: 10;
 	gap-vertical: 10;
@@ -140,6 +140,21 @@ topbar:{
 		background-color-rgb:0x49708A;
 		underline-color-rgb:0xECD078;
 		#internal-spacing: true;
+	}
+	ya_diskspace:{
+		exec: "YABAR_DISKSPACE";
+		align: "left";
+		fixed-size: 120;
+		interval: 10;
+		internal-prefix: " ";
+		# examples for this option:
+		# "/dev/sda1"           first partition of device sda
+		# "/dev/sdb"            all mounted partitions of device sdb
+		# "/dev/mapper/vgc-"    all mounted logical volumes of volume group vgc
+		# "/dev"                all mounted partitions / logical volumes
+		internal-option1: "/dev/sda";
+		background-color-rgb:0x49708A;
+		underline-color-rgb:0xECD078;
 	}
     # example for an external block
 	title: {
